arrayを含む定義の場合は中間に処理を挟むようにする
